@@ -3,8 +3,9 @@ Release 0.5
 ---------------------------------------------------------------------
 NEW FEATURES:
 * jasmineMatchers.toBeExtensible()
-* jasmineMatchers.toBeInstanceOf()
 * jasmineMatchers.toBeFalse()
+* jasmineMatchers.toBeFrozen()
+* jasmineMatchers.toBeInstanceOf()
 * jasmineMatchers.toBeSealed()
 * jasmineMatchers.toBeTrue()
 
